Add files via upload
Fixed bug with loading rt.jar on Windows when the classpath contains spaces.